--- a/iframe.html
+++ b/iframe.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bienvenue sur ma page avec une iframe</h1>
-    <iframe src="https://login.valid.apizee.com/realms/apizee/account/" width="600" height="400" title="Login"></iframe>
+    <iframe src="https://login.preprod.apizee.com/realms/arnaud-tests/account/" width="600" height="400" title="Login"></iframe>
 </body>
 </html>
